tests/NormalTests/paczka1/small_fuzzy/90422223.err
Error in line 1: ad]eX A914 69,2
Error in line 7: UXLN A914 26,5
Error in line 9: UXLN A354 63,2
Error in line 13: eV3tTFCyo A354 7,3
Error in line 8: MKa2tj S896 19,2
